grammar/.antlr/SRLanguageParser.java
// Generated from c:\Users\u005Cusuario\Desktop\translatorSR-Python\grammar\SRLanguage.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SRLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, GLOBAL=4, END=5, IMPORT=6, RESOURCE=7, INT=8, 
		VAR=9, IF=10, FI=11, ELSE=12, EXTEND=13, BODY=14, IN=15, NI=16, CALL=17, 
		FA=18, AF=19, LPARENT=20, RPARENT=21, LBRACKET=22, RBRACKET=23, COMA=24, 
		INITIAL=25, CONST=26, RETURNS=27, RETURN=28, TO=29, DOWNTO=30, FINAL=31, 
		OP=32, DO=33, OD=34, PROC=35, CO=36, OC=37, CAP=38, SEND=39, DESTROY=40, 
		BEGIN=41, RECEIVE=42, CREATE=43, OPTYPE=44, BY=45, SUCHTHAT=46, TYPE=47, 
		NULL=48, BOOL=49, VAL=50, RES=51, REF=52, EXIT=53, NEXT=54, FILE=55, PRIVATE=56, 
		OR=57, INDEX=58, MOD=59, STOP=60, PROCEDURE=61, AND=62, REAL=63, ON=64, 
		ROW=65, TRUE=66, SENDER=67, LEFT=68, UP=69, ABORT=70, REPLY=71, PROCESS=72, 
		CHAR=73, STRING=74, FALSE=75, LOW=76, HIGH=77, NEW=78, ENUM=79, ANY=80, 
		REC=81, PTR=82, UNION=83, VM=84, SEM=85, XOR=86, SKP=87, FORWARD=88, SEPARATE=89, 
		WRITE=90, V=91, P=92, EJECUTA=93, NUM=94, SEPARA=95, LBRACE=96, RBRACE=97, 
		ASIGNACION=98, SWAP=99, INCREMENTO=100, DECREMENTO=101, DESPLAZAR_IZQ=102, 
		DESPLAZAR_DER=103, EXCLAMACION=104, PUNTO=105, DOSPUNTOS=106, AUG=107, 
		OPERADOR_ARITMETICO=108, OPERADOR_COMPARACION=109, CADENA=110, ESP=111, 
		LINE_COMMENT=112, ID=113;
	public static final int
		RULE_components = 0, RULE_global = 1, RULE_resource_specification = 2, 
		RULE_resource_body = 3, RULE_spec_body = 4, RULE_proc = 5, RULE_block = 6, 
		RULE_block_items = 7, RULE_block_item = 8, RULE_declarations = 9, RULE_constant = 10, 
		RULE_type = 11, RULE_op_type = 12, RULE_variable = 13, RULE_subscripts = 14, 
		RULE_id_subs_lp = 15, RULE_id_subs = 16, RULE_id_list = 17, RULE_operation = 18, 
		RULE_statements = 19, RULE_write_expr = 20, RULE_write_params = 21, RULE_explicit_call = 22, 
		RULE_invocation = 23, RULE_sequential = 24, RULE_op_invocation = 25, RULE_op_service = 26, 
		RULE_in_cmd = 27, RULE_resource_control = 28, RULE_t = 29, RULE_basic_type = 30, 
		RULE_enum_def = 31, RULE_pointer_def = 32, RULE_record_def = 33, RULE_union_def = 34, 
		RULE_capability_def = 35, RULE_cap_for = 36, RULE_prototype = 37, RULE_op_prototype = 38, 
		RULE_op_res = 39, RULE_result_id = 40, RULE_type_res = 41, RULE_parameters = 42, 
		RULE_parameters2 = 43, RULE_expression = 44, RULE_op_log = 45, RULE_expr1 = 46, 
		RULE_expr2 = 47, RULE_expr3 = 48, RULE_quantifier = 49, RULE_quantifier1 = 50, 
		RULE_quantifier2 = 51, RULE_direction = 52, RULE_step_opt = 53, RULE_such_that_opt = 54, 
		RULE_actuals = 55, RULE_qualified_id = 56;
	public static final String[] ruleNames = {
		"components", "global", "resource_specification", "resource_body", "spec_body", 
		"proc", "block", "block_items", "block_item", "declarations", "constant", 
		"type", "op_type", "variable", "subscripts", "id_subs_lp", "id_subs", 
		"id_list", "operation", "statements", "write_expr", "write_params", "explicit_call", 
		"invocation", "sequential", "op_invocation", "op_service", "in_cmd", "resource_control", 
		"t", "basic_type", "enum_def", "pointer_def", "record_def", "union_def", 
		"capability_def", "cap_for", "prototype", "op_prototype", "op_res", "result_id", 
		"type_res", "parameters", "parameters2", "expression", "op_log", "expr1", 
		"expr2", "expr3", "quantifier", "quantifier1", "quantifier2", "direction", 
		"step_opt", "such_that_opt", "actuals", "qualified_id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'&'", "'||'", "'global'", "'end'", "'import'", "'resource'", 
		"'int'", "'var'", "'if'", "'fi'", "'else'", "'extend'", "'body'", "'in'", 
		"'ni'", "'call'", "'fa'", "'af'", "'('", "')'", "'['", "']'", "','", "'inital'", 
		"'const'", "'returns'", "'return'", "'to'", "'downto'", "'final'", "'op'", 
		"'do'", "'od'", "'proc'", "'co'", "'oc'", "'cap'", "'send'", "'destroy'", 
		"'begin'", "'receive'", "'create'", "'optype'", "'by'", "'st'", "'type'", 
		"'null'", "'bool'", "'val'", "'res'", "'ref'", "'exit'", "'next'", "'file'", 
		"'private'", "'or'", "'index'", "'mod'", "'stop'", "'procedure'", "'and'", 
		"'real'", "'on'", "'row'", "'true'", "'sender'", "'left'", "'up'", "'abort'", 
		"'reply'", "'process'", "'char'", "'string'", "'false'", "'low'", "'high'", 
		"'new'", "'enum'", "'any'", "'rec'", "'ptr'", "'union'", "'vm'", "'sem'", 
		"'xor'", "'skip'", "'forward'", "'separate'", "'write'", "'V'", "'P'", 
		"'->'", null, "'[]'", "'{'", "'}'", "':='", "':=:'", "'++'", "'--'", "'<<'", 
		"'>>'", "'!'", "'.'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "GLOBAL", "END", "IMPORT", "RESOURCE", "INT", 
		"VAR", "IF", "FI", "ELSE", "EXTEND", "BODY", "IN", "NI", "CALL", "FA", 
		"AF", "LPARENT", "RPARENT", "LBRACKET", "RBRACKET", "COMA", "INITIAL", 
		"CONST", "RETURNS", "RETURN", "TO", "DOWNTO", "FINAL", "OP", "DO", "OD", 
		"PROC", "CO", "OC", "CAP", "SEND", "DESTROY", "BEGIN", "RECEIVE", "CREATE", 
		"OPTYPE", "BY", "SUCHTHAT", "TYPE", "NULL", "BOOL", "VAL", "RES", "REF", 
		"EXIT", "NEXT", "FILE", "PRIVATE", "OR", "INDEX", "MOD", "STOP", "PROCEDURE", 
		"AND", "REAL", "ON", "ROW", "TRUE", "SENDER", "LEFT", "UP", "ABORT", "REPLY", 
		"PROCESS", "CHAR", "STRING", "FALSE", "LOW", "HIGH", "NEW", "ENUM", "ANY", 
		"REC", "PTR", "UNION", "VM", "SEM", "XOR", "SKP", "FORWARD", "SEPARATE", 
		"WRITE", "V", "P", "EJECUTA", "NUM", "SEPARA", "LBRACE", "RBRACE", "ASIGNACION", 
		"SWAP", "INCREMENTO", "DECREMENTO", "DESPLAZAR_IZQ", "DESPLAZAR_DER", 
		"EXCLAMACION", "PUNTO", "DOSPUNTOS", "AUG", "OPERADOR_ARITMETICO", "OPERADOR_COMPARACION", 
		"CADENA", "ESP", "LINE_COMMENT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SRLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SRLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ComponentsContext extends ParserRuleContext {
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SRLanguageParser.EOF, 0); }
		public Resource_specificationContext resource_specification() {
			return getRuleContext(Resource_specificationContext.class,0);
		}
		public ComponentsContext components() {
			return getRuleContext(ComponentsContext.class,0);
		}
		public Resource_bodyContext resource_body() {
			return getRuleContext(Resource_bodyContext.class,0);
		}
		public ComponentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_components; }
	}

	public final ComponentsContext components() throws RecognitionException {
		ComponentsContext _localctx = new ComponentsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_components);
		int _la;
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GLOBAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				global();
				setState(115);
				match(EOF);
				}
				break;
			case RESOURCE:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				resource_specification();
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GLOBAL) | (1L << RESOURCE) | (1L << BODY))) != 0)) {
					{
					setState(118);
					components();
					}
				}

				setState(121);
				match(EOF);
				}
				break;
			case BODY:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				resource_body();
				setState(124);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(SRLanguageParser.GLOBAL, 0); }
		public TerminalNode ID() { return getToken(SRLanguageParser.ID, 0); }
		public TerminalNode END() { return getToken(SRLanguageParser.END, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(GLOBAL);
			setState(129);
			match(ID);
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
				{
				setState(130);
				constant();
				}
				break;
			case TYPE:
				{
				setState(131);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(134);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Resource_specificationContext extends ParserRuleContext {
		public TerminalNode RESOURCE() { return getToken(SRLanguageParser.RESOURCE, 0); }
		public List<TerminalNode> ID() { return getTokens(SRLanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SRLanguageParser.ID, i);
		}
		public TerminalNode IMPORT() { return getToken(SRLanguageParser.IMPORT, 0); }
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public List<Spec_bodyContext> spec_body() {
			return getRuleContexts(Spec_bodyContext.class);
		}
		public Spec_bodyContext spec_body(int i) {
			return getRuleContext(Spec_bodyContext.class,i);
		}
		public TerminalNode LPARENT() { return getToken(SRLanguageParser.LPARENT, 0); }
		public TerminalNode RPARENT() { return getToken(SRLanguageParser.RPARENT, 0); }
		public List<TerminalNode> END() { return getTokens(SRLanguageParser.END); }
		public TerminalNode END(int i) {
			return getToken(SRLanguageParser.END, i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode INITIAL() { return getToken(SRLanguageParser.INITIAL, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<ProcContext> proc() {
			return getRuleContexts(ProcContext.class);
		}
		public ProcContext proc(int i) {
			return getRuleContext(ProcContext.class,i);
		}
		public TerminalNode FINAL() { return getToken(SRLanguageParser.FINAL, 0); }
		public Resource_specificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource_specification; }
	}

	public final Resource_specificationContext resource_specification() throws RecognitionException {
		Resource_specificationContext _localctx = new Resource_specificationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_resource_specification);
		int _la;
		try {
			int _alt;
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(RESOURCE);
				setState(137);
				match(ID);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IMPORT) {
					{
					setState(138);
					match(IMPORT);
					setState(139);
					match(ID);
					}
				}

				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << CONST) | (1L << OP) | (1L << OPTYPE) | (1L << TYPE))) != 0)) {
					{
					{
					setState(142);
					declarations();
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(148);
						spec_body();
						}
						} 
					}
					setState(153);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(RESOURCE);
				setState(155);
				match(ID);
				setState(156);
				match(LPARENT);
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(157);
					parameters();
					}
				}

				setState(160);
				match(RPARENT);
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(161);
						declarations();
						}
						} 
					}
					setState(166);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << IF) | (1L << IN) | (1L << CALL) | (1L << FA) | (1L << LPARENT) | (1L << RETURN) | (1L << DO) | (1L << CO) | (1L << SEND) | (1L << DESTROY) | (1L << RECEIVE) | (1L << NULL) | (1L << EXIT) | (1L << NEXT))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (TRUE - 66)) | (1L << (REPLY - 66)) | (1L << (FALSE - 66)) | (1L << (SKP - 66)) | (1L << (WRITE - 66)) | (1L << (NUM - 66)) | (1L << (EXCLAMACION - 66)) | (1L << (CADENA - 66)) | (1L << (ID - 66)))) != 0)) {
					{
					{
					setState(167);
					statements();
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INITIAL) {
					{
					setState(173);
					match(INITIAL);
					setState(174);
					block();
					setState(175);
					match(END);
					}
				}

				setState(180); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(179);
					proc();
					}
					}
					setState(182); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==PROC );
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FINAL) {
					{
					setState(184);
					match(FINAL);
					setState(185);
					block();
					setState(186);
					match(END);
					}
				}

				setState(190);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Resource_bodyContext extends ParserRuleContext {
		public TerminalNode BODY() { return getToken(SRLanguageParser.BODY, 0); }
		public TerminalNode ID() { return getToken(SRLanguageParser.ID, 0); }
		public List<TerminalNode> END() { return getTokens(SRLanguageParser.END); }
		public TerminalNode END(int i) {
			return getToken(SRLanguageParser.END, i);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode INITIAL() { return getToken(SRLanguageParser.INITIAL, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<ProcContext> proc() {
			return getRuleContexts(ProcContext.class);
		}
		public ProcContext proc(int i) {
			return getRuleContext(ProcContext.class,i);
		}
		public TerminalNode FINAL() { return getToken(SRLanguageParser.FINAL, 0); }
		public Resource_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource_body; }
	}

	public final Resource_bodyContext resource_body() throws RecognitionException {
		Resource_bodyContext _localctx = new Resource_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_resource_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(BODY);
			setState(195);
			match(ID);
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << CONST) | (1L << OP) | (1L << OPTYPE) | (1L << TYPE))) != 0)) {
				{
				setState(196);
				declarations();
				}
			}

			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIAL) {
				{
				setState(199);
				match(INITIAL);
				setState(200);
				block();
				setState(201);
				match(END);
				}
			}

			setState(206); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(205);
				proc();
				}
				}
				setState(208); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PROC );
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FINAL) {
				{
				setState(210);
				match(FINAL);
				setState(211);
				block();
				setState(212);
				match(END);
				}
			}

			setState(216);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Spec_bodyContext extends ParserRuleContext {
		public List<TerminalNode> END() { return getTokens(SRLanguageParser.END); }
		public TerminalNode END(int i) {
			return getToken(SRLanguageParser.END, i);
		}
		public TerminalNode BODY() { return getToken(SRLanguageParser.BODY, 0); }
		public List<TerminalNode> ID() { return getTokens(SRLanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SRLanguageParser.ID, i);
		}
		public TerminalNode LPARENT() { return getToken(SRLanguageParser.LPARENT, 0); }
		public TerminalNode RPARENT() { return getToken(SRLanguageParser.RPARENT, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode INITIAL() { return getToken(SRLanguageParser.INITIAL, 0); }
		public List<ProcContext> proc() {
			return getRuleContexts(ProcContext.class);
		}
		public ProcContext proc(int i) {
			return getRuleContext(ProcContext.class,i);
		}
		public TerminalNode FINAL() { return getToken(SRLanguageParser.FINAL, 0); }
		public TerminalNode RESOURCE() { return getToken(SRLanguageParser.RESOURCE, 0); }
		public TerminalNode SEPARATE() { return getToken(SRLanguageParser.SEPARATE, 0); }
		public Spec_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec_body; }
	}

	public final Spec_bodyContext spec_body() throws RecognitionException {
		Spec_bodyContext _localctx = new Spec_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_spec_body);
		int _la;
		try {
			setState(257);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case END:
				enterOuterAlt(_localctx, 1);
				{
				setState(218);
				match(END);
				}
				break;
			case BODY:
				enterOuterAlt(_localctx, 2);
				{
				setState(219);
				match(BODY);
				setState(220);
				match(ID);
				setState(221);
				match(LPARENT);
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(222);
					parameters();
					}
				}

				setState(225);
				match(RPARENT);
				setState(226);
				block();
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INITIAL) {
					{
					setState(227);
					match(INITIAL);
					setState(228);
					block();
					setState(229);
					match(END);
					}
				}
